--- a/website/app/globals.css
+++ b/website/app/globals.css
@@ -9,6 +9,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: black;
+  height: 100%;
 }
 
 a {
@@ -18,4 +19,25 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.btn {
+  @apply px-4 py-2 text-white bg-blue-600 hover:bg-blue-700 rounded shadow-lg text-sm font-normal;
+}
+
+.cm-theme .cm-editor {
+  height: 100%;
+}
+
+*::-webkit-scrollbar {
+  width: 10px;
+}
+*::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+*::-webkit-scrollbar-thumb {
+  background: #888;
+}
+*::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
